--- a/sms-frontend-html/index.html
+++ b/sms-frontend-html/index.html
@@ -2,41 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SMS Portal Login</title>
+  <title>Teacher Dashboard</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 class="site-title">📚 Student Management System</h1>
+  <!-- Top Navbar -->
+  <nav class="navbar">
+    <span class="navbar-title">📗 Teacher Dashboard</span>
+    <button onclick="logout()">Logout</button>
+  </nav>
 
-  <!-- Wrapper for flex centering -->
-  <div class="login-wrapper">
-    <div class="login-container">
-      <h2>Login to SMS Portal</h2>
-
-      <label for="role">Select Role:</label>
-      <select id="role">
-        <option value="student">Student</option>
-        <option value="teacher">Teacher</option>
-        <option value="admin">Admin</option>
-      </select>
-
-      <label for="username">Username:</label>
-      <input type="text" id="username" placeholder="Enter username">
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" placeholder="Enter password">
-
-      <button onclick="login()">Login</button>
-
-      <p id="error-message" style="color: red;"></p>
-
-      <!-- 🔗 New links -->
-      <a href="forgot-password.html">🔐 Forgot Password?</a>
-      <a href="admin-register.html">📝 Register as Admin</a>
+  <!-- Initial Centered Menu -->
+  <div class="menu-wrapper" id="menu-wrapper">
+    <div class="menu-card">
+      <h2>👋 Welcome, Teacher</h2>
+      <div class="menu-options">
+        <button onclick="openCategory('student')">👥 Student Management</button>
+        <button onclick="openCategory('attendance')">📊 Attendance & Teachers</button>
+        <button onclick="openCategory('assignments')">📚 Assignments</button>
+        <button onclick="openCategory('marks')">🧮 Marks</button>
+        <button onclick="openCategory('timetable')">🗓️ Timetable & Subjects</button>
+      </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Sidebar + Content Area -->
+  <div class="dashboard-container" id="dashboard" style="display: none;">
+    <div class="sidebar">
+      <div class="sidebar-card">
+        <ul class="menu" id="sidebar-menu">
+          <!-- Back button + Sub-options will be injected here -->
+        </ul>
+      </div>
+    </div>
+    <div class="content-area" id="content-area">
+      <div id="content-display">
+        <h2>Select an option from the menu</h2>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function logout() {
+      window.location.href = 'index.html';
+    }
+
+    const subMenus = {
+      student: [
+        "View Students",
+        "Add Student",
+        "Search by ID / Name",
+        "Edit by ID / Name",
+        "Delete by Name"
+      ],
+      attendance: [
+        "Mark Attendance",
+        "View Teachers"
+      ],
+      assignments: [
+        "Add Assignment",
+        "Submit Assignment",
+        "View Submissions"
+      ],
+      marks: [
+        "Schedule Test",
+        "Add Marks",
+        "View Marks by Student",
+        "View Marks by Subject"
+      ],
+      timetable: [
+        "Create Timetable",
+        "View Timetable",
+        "Enter Subjects"
+      ]
+    };
+
+    function openCategory(category) {
+      document.getElementById("menu-wrapper").style.display = "none";
+      document.getElementById("dashboard").style.display = "flex";
+
+      const sidebarMenu = document.getElementById("sidebar-menu");
+      sidebarMenu.innerHTML = "";
+
+      // Add back button styled like menu item
+      const backItem = document.createElement("li");
+      backItem.textContent = "⬅️ Back to Main Menu";
+      backItem.onclick = goBack;
+      sidebarMenu.appendChild(backItem);
+
+      // Add submenu items
+      subMenus[category].forEach(item => {
+        const li = document.createElement("li");
+        li.textContent = item;
+        li.onclick = () => loadContent(item);
+        sidebarMenu.appendChild(li);
+      });
+
+      loadContent(subMenus[category][0]);
+    }
+
+    function loadContent(title) {
+      const content = document.getElementById("content-display");
+      content.innerHTML = `<h2>${title}</h2><p>Content for "${title}" will appear here.</p>`;
+    }
+
+    function goBack() {
+      document.getElementById("dashboard").style.display = "none";
+      document.getElementById("menu-wrapper").style.display = "flex";
+    }
+  </script>
 </body>
 </html>
