--- a/sms-frontend-html/index.html
+++ b/sms-frontend-html/index.html
@@ -38,10 +38,8 @@
 
       <!-- Inline Error Message -->
       <div id="error-message" class="error-message"></div>
-
-      <!-- Extra Links -->
-      <a href="#">Forgot Password?</a>
-      <a href="#">Admin Signup</a>
+      <a href="forgot-password.html">Forgot Password?</a>
+      <a href="admin-register.html">Admin Signup</a>
     </div>
   </div>
 
