--- a/sms-frontend-html/forgot-password.html
+++ b/sms-frontend-html/forgot-password.html
@@ -6,10 +6,81 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>🔐 Forgot Password</h2>
-    <p>This feature is coming soon. Please contact your admin for help.</p>
-    <a href="index.html">⬅️ Back to Login</a>
+  <div class="site-title">🔐 Forgot Password</div>
+  <div class="login-wrapper">
+    <div class="login-container">
+      <form id="otpForm">
+        <label for="role">Role:</label>
+        <select id="role" required>
+          <option value="">--Select Role--</option>
+          <option value="student">Student</option>
+          <option value="teacher">Teacher</option>
+          <option value="admin">Admin</option>
+        </select>
+
+        <label for="username">Username:</label>
+        <input type="text" id="username" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+
+        <button type="submit">Request OTP</button>
+      </form>
+
+      <div id="otpMessage"></div>
+
+      <form id="resetForm" style="display:none;">
+        <label for="otp">Enter OTP:</label>
+        <input type="text" id="otp" required>
+
+        <label for="newPassword">New Password:</label>
+        <input type="password" id="newPassword" required>
+
+        <button type="submit">Reset Password</button>
+      </form>
+
+      <div id="resetMessage"></div>
+
+      <a href="index.html">⬅️ Back to Login</a>
+    </div>
   </div>
+
+  <script>
+    document.getElementById("otpForm").onsubmit = async function(e) {
+      e.preventDefault();
+      const role = document.getElementById("role").value;
+      const username = document.getElementById("username").value;
+      const email = document.getElementById("email").value;
+
+      const res = await fetch("http://localhost:5000/api/request-otp", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ role, username, email })
+      });
+
+      const data = await res.json();
+      document.getElementById("otpMessage").textContent = data.message;
+      if (data.success) {
+        document.getElementById("resetForm").style.display = "block";
+      }
+    };
+
+    document.getElementById("resetForm").onsubmit = async function(e) {
+      e.preventDefault();
+      const role = document.getElementById("role").value;
+      const username = document.getElementById("username").value;
+      const otp = document.getElementById("otp").value;
+      const newPassword = document.getElementById("newPassword").value;
+
+      const res = await fetch("http://localhost:5000/api/reset-password", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ role, username, otp, new_password: newPassword })
+      });
+
+      const data = await res.json();
+      document.getElementById("resetMessage").textContent = data.message;
+    };
+  </script>
 </body>
 </html>
