--- a/sms-frontend-html/submit-assignment.html
+++ b/sms-frontend-html/submit-assignment.html
@@ -5,6 +5,15 @@
   <title>Submit Assignment</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    .assignment-form {
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
     .student-row {
       display: flex;
       justify-content: space-between;
@@ -36,10 +45,36 @@
       margin-top: 15px;
       font-weight: bold;
     }
+
+    label, select, button {
+      display: block;
+      margin-top: 10px;
+      width: 100%;
+    }
+
+    select {
+      padding: 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      padding: 10px;
+      background-color:#b39ddb;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      margin-top: 20px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #9575cd;
+    }
   </style>
 </head>
 <body>
-  <div class="form-container">
+  <div class="assignment-form">
     <h2>📤 Submit Assignment</h2>
 
     <!-- Dropdowns -->
@@ -173,10 +208,11 @@
 
     document.getElementById("submit-btn").onclick = () => {
       const subject = document.getElementById("subject").value.trim();
+      const className = document.getElementById("class").value.trim();
       const checkboxes = document.querySelectorAll("#student-list input:checked");
       const student_ids = Array.from(checkboxes).map(cb => parseInt(cb.value));
 
-      if (student_ids.length === 0 || !subject) {
+      if (student_ids.length === 0 || !subject || !className) {
         document.getElementById("status-message").textContent = "⚠️ Please select students and subject.";
         return;
       }
@@ -188,9 +224,14 @@
       })
       .then(res => res.json())
       .then(data => {
-        document.getElementById("status-message").textContent = data.success
-          ? "✅ Submissions recorded."
-          : "❌ Failed to record submissions.";
+        const msg = data.submitted_ids.length > 0
+          ? `✅ ${data.submitted_ids.length} submissions recorded.`
+          : "⚠️ All selected students had already submitted.";
+
+        document.getElementById("status-message").textContent = msg;
+
+        // 🔄 Refresh student list to reflect updated submission status
+        triggerStudentFetch(className, subject);
       })
       .catch(err => {
         console.error("❌ Submission error:", err);
