--- a/sms-frontend-html/teacher.html
+++ b/sms-frontend-html/teacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Teacher Dashboard</title>
+  <title>📗 Teacher Dashboard</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
         <button onclick="openCategory('student')">👥 Student Management</button>
         <button onclick="openCategory('attendance')">📊 Attendance & Teachers</button>
         <button onclick="openCategory('assignments')">📚 Assignments</button>
-        <button onclick="openCategory('marks')">🧮 Marks</button>
+        <button onclick="openCategory('testmarks')">🧮 Test Marks</button>
         <button onclick="openCategory('timetable')">🗓️ Timetable & Subjects</button>
       </div>
     </div>
@@ -62,19 +62,43 @@
         "🆕 Add Assignment",
         "📤 Submit Assignment",
         "📥 View Submissions",
-        "🛠️ Edit/Delete Assignment"  // ✅ New submenu item
+        "🛠️ Edit/Delete Assignment"
       ],
-      marks: [
+      testmarks: [
         "📅 Schedule Test",
         "🧮 Add Marks",
         "👤 View Marks by Student",
-        "📘 View Marks by Subject"
+        "📘 View Marks by Subject",
+        "✏️ Edit/Delete Test",
+        "🛠️ Edit/Delete Marks"
       ],
       timetable: [
         "🗓️ Create Timetable",
         "📖 View Timetable",
         "📚 Enter Subjects"
       ]
+    };
+
+    const pageMap = {
+      "📋 View Students": "teacher-view-students.html",
+      "➕ Add Student": "teacher-add-student.html",
+      "🔍 Search by ID / Name": "teacher-search-student.html",
+      "✏️ Edit/Delete Student": "teacher-edit-delete-student.html",
+      "📝 Mark Attendance": "mark-attendance.html",
+      "👨‍🏫 View Teachers": "view-teachers.html",
+      "🆕 Add Assignment": "add-assignment.html",
+      "📤 Submit Assignment": "submit-assignment.html",
+      "📥 View Submissions": "view-submissions.html",
+      "🛠️ Edit/Delete Assignment": "edit-delete-assignment.html",
+      "📅 Schedule Test": "schedule-test.html",
+      "🧮 Add Marks": "add-marks.html",
+      "👤 View Marks by Student": "view-marks-student.html",
+      "📘 View Marks by Subject": "view-marks-subject.html",
+      "✏️ Edit/Delete Test": "edit-delete-test.html",
+      "🛠️ Edit/Delete Marks": "edit-delete-marks.html",
+      "🗓️ Create Timetable": "create-timetable.html",
+      "📖 View Timetable": "view-timetable.html",
+      "📚 Enter Subjects": "enter-subjects.html"
     };
 
     function openCategory(category) {
@@ -102,28 +126,8 @@
 
     function loadContent(title) {
       const content = document.getElementById("content-display");
-
-      const pageMap = {
-        "📋 View Students": "teacher-view-students.html",
-        "➕ Add Student": "teacher-add-student.html",
-        "🔍 Search by ID / Name": "teacher-search-student.html",
-        "✏️ Edit/Delete Student": "teacher-edit-delete-student.html",
-        "📝 Mark Attendance": "mark-attendance.html",
-        "👨‍🏫 View Teachers": "view-teachers.html",
-        "🆕 Add Assignment": "add-assignment.html",
-        "📤 Submit Assignment": "submit-assignment.html",
-        "📥 View Submissions": "view-submissions.html",
-        "🛠️ Edit/Delete Assignment": "edit-delete-assignment.html",  // ✅ New page mapping
-        "📅 Schedule Test": "schedule-test.html",
-        "🧮 Add Marks": "add-marks.html",
-        "👤 View Marks by Student": "view-marks-student.html",
-        "📘 View Marks by Subject": "view-marks-subject.html",
-        "🗓️ Create Timetable": "create-timetable.html",
-        "📖 View Timetable": "view-timetable.html",
-        "📚 Enter Subjects": "enter-subjects.html"
-      };
-
       const page = pageMap[title];
+
       if (page) {
         content.innerHTML = `<iframe src="${page}" width="100%" height="600px" style="border:none;"></iframe>`;
       } else {
@@ -134,7 +138,6 @@
     function goBack() {
       document.getElementById("dashboard").style.display = "none";
       document.getElementById("menu-wrapper").style.display = "flex";
-      document.getElementById("back-button").style.display = "none";
     }
   </script>
 </body>
