--- a/sms-frontend-html/edit-delete-test.html
+++ b/sms-frontend-html/edit-delete-test.html
@@ -2,78 +2,262 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Edit/Delete Test</title>
+  <title>🛠️ Edit/Delete Test</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .test-row {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+      border-radius: 6px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .test-info {
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .test-actions button {
+      margin-left: 8px;
+      padding: 6px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .edit-form {
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: none;
+    }
+
+    .edit-form label {
+      display: block;
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 15px;
+    }
+
+    .edit-form input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+      margin-bottom: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+
+    .edit-form button {
+      padding: 10px 16px;
+      background-color: #b39ddb;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .edit-form button:hover {
+      background-color: #9575cd;
+    }
+
+    h2 {
+      color: #4b0082;
+    }
+
+    label {
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <div class="content-wrapper">
-  <h2>✏️ Edit/Delete Scheduled Tests</h2>
+  <div class="content-wrapper">
+    <h2>🛠️ Edit/Delete Scheduled Tests</h2>
 
-  <label for="classSelect">Select Class:</label>
-  <select id="classSelect">
-    <option value="">-- Choose Class --</option>
-    <option value="TYCS">TYCS</option>
-    <option value="SYCS">SYCS</option>
-    <option value="FYCS">FYCS</option>
-    <!-- Add more classes as needed -->
-  </select>
+    <label for="classSelect">Select Class:</label>
+    <select id="classSelect">
+      <option value="">-- Choose Class --</option>
+    </select>
 
-  <div id="testList" style="margin-top: 20px;"></div>
+    <div id="testList" style="margin-top: 20px;"></div>
 
-  <script>
-    document.getElementById("classSelect").addEventListener("change", async (e) => {
-      const className = e.target.value;
-      if (!className) return;
+    <script>
+      const BASE_URL = "http://127.0.0.1:5000";
 
-      const res = await fetch(`/api/scheduled-tests?class=${className}`);
-      const result = await res.json();
+      async function loadClasses() {
+        try {
+          const res = await fetch(`${BASE_URL}/api/classes`);
+          const result = await res.json();
 
-      const container = document.getElementById("testList");
-      container.innerHTML = "";
+          const select = document.getElementById("classSelect");
+          select.innerHTML = '<option value="">-- Choose Class --</option>';
 
-      if (!result.success || result.tests.length === 0) {
-        container.innerHTML = "<p>⚠️ No tests found for this class.</p>";
-        return;
+          if (result.success && Array.isArray(result.classes)) {
+            result.classes.forEach(cls => {
+              const option = document.createElement("option");
+              option.value = cls;
+              option.textContent = cls;
+              select.appendChild(option);
+            });
+          } else {
+            alert("No classes found.");
+          }
+        } catch (err) {
+          console.error("Failed to load classes:", err);
+          alert("Could not fetch class list.");
+        }
       }
 
-      result.tests.forEach(test => {
-        const row = document.createElement("div");
-        row.classList.add("test-row");
-        row.innerHTML = `
-          <strong>${test.subject}</strong> | ${test.date} | Max Marks: 
-          <input type="number" value="${test.max_marks}" min="1" style="width: 60px;" />
-          <button onclick="updateTest('${test.subject}', '${test.date}', this.previousElementSibling.value)">Update</button>
-          <button onclick="deleteTest('${test.subject}', '${test.date}')">Delete</button>
-        `;
-        container.appendChild(row);
+      async function loadTests(className) {
+        try {
+          const res = await fetch(`${BASE_URL}/api/scheduled-tests?class=${encodeURIComponent(className)}`);
+          const result = await res.json();
+
+          const container = document.getElementById("testList");
+          container.innerHTML = "";
+
+          if (!result.success || result.tests.length === 0) {
+            container.innerHTML = "<p>No tests found for this class.</p>";
+            return;
+          }
+
+          result.tests.forEach(test => {
+            const wrapper = document.createElement("div");
+
+            const row = document.createElement("div");
+            row.classList.add("test-row");
+            row.innerHTML = `
+              <div class="test-info">${test.subject} — ${test.date} — Max Marks: <span class="marks-value">${test.max_marks}</span></div>
+              <div class="test-actions">
+                <button type="button" onclick="showEditForm(this)">Edit</button>
+                <button type="button" onclick="deleteTest('${test.subject}', '${test.date}', '${className}')">Delete</button>
+              </div>
+            `;
+
+            const form = document.createElement("div");
+            form.classList.add("edit-form");
+            form.innerHTML = `
+              <label>Subject:</label>
+              <input type="text" value="${test.subject}" class="edit-subject" />
+              <label>Date:</label>
+              <input type="date" value="${convertToInputDate(test.date)}" class="edit-date" />
+              <label>Max Marks:</label>
+              <input type="number" value="${test.max_marks}" min="1" class="edit-marks" />
+              <label>Class:</label>
+              <input type="text" value="${className}" class="edit-class" />
+              <button type="button" onclick="saveTestChanges(event, this)">Save Changes</button>
+            `;
+
+            wrapper.appendChild(row);
+            wrapper.appendChild(form);
+            container.appendChild(wrapper);
+          });
+        } catch (err) {
+          console.error("Failed to load tests:", err);
+          alert("Could not load tests for this class.");
+        }
+      }
+
+      function convertToInputDate(dateStr) {
+        const [day, month, year] = dateStr.split("-");
+        return `${year}-${month}-${day}`;
+      }
+
+      function showEditForm(button) {
+        const form = button.closest(".test-row").nextElementSibling;
+        form.style.display = "block";
+        button.style.display = "none";
+      }
+
+      async function saveTestChanges(event, saveBtn) {
+        event.preventDefault();
+
+        const form = saveBtn.parentElement;
+        const subject = form.querySelector(".edit-subject").value.trim();
+        const date = form.querySelector(".edit-date").value;
+        const maxMarks = form.querySelector(".edit-marks").value;
+        const className = form.querySelector(".edit-class").value.trim();
+
+        if (!subject || !date || !maxMarks || !className) {
+          alert("All fields are required.");
+          return;
+        }
+
+        const formattedDate = date.split("-").reverse().join("-");
+
+        const infoDiv = form.previousElementSibling.querySelector(".test-info").textContent;
+        const [originalSubject, originalDateRaw] = infoDiv.split(" — ");
+        const originalDate = originalDateRaw.trim();
+        const originalClass = className;
+
+        try {
+          const res = await fetch(`${BASE_URL}/api/edit-test`, {
+            method: "PATCH",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              original_subject: originalSubject.trim(),
+              original_date: originalDate,
+              original_class: originalClass.trim(),
+              subject,
+              date: formattedDate,
+              new_max_marks: maxMarks,
+              class: className
+            })
+          });
+
+          const result = await res.json();
+          console.log("✅ Response from backend:", result);
+          alert(result.message);
+
+          const info = form.previousElementSibling.querySelector(".marks-value");
+          info.textContent = maxMarks;
+
+          form.style.display = "none";
+          form.previousElementSibling.querySelector(".test-actions button").style.display = "inline-block";
+
+          loadTests(className);
+        } catch (err) {
+          console.error("Update failed:", err);
+          alert("Failed to update test.");
+        }
+      }
+
+      async function deleteTest(subject, date, className) {
+        if (!confirm(`Are you sure you want to delete ${subject} on ${date}?`)) return;
+
+        try {
+          const res = await fetch(`${BASE_URL}/api/delete-test`, {
+            method: "DELETE",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ subject, date, class: className })
+          });
+
+          const result = await res.json();
+          alert(result.message);
+          document.getElementById("classSelect").dispatchEvent(new Event("change"));
+        } catch (err) {
+          console.error("Delete failed:", err);
+          alert("Failed to delete test.");
+        }
+      }
+
+      document.getElementById("classSelect").addEventListener("change", (e) => {
+        const className = e.target.value;
+        if (className) loadTests(className);
       });
-    });
 
-    async function updateTest(subject, date, newMax) {
-      const res = await fetch("/api/edit-test", {
-        method: "PATCH",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ subject, date, new_max_marks: newMax })
-      });
-
-      const result = await res.json();
-      alert(result.message);
-    }
-
-    async function deleteTest(subject, date) {
-      if (!confirm(`Are you sure you want to delete ${subject} on ${date}?`)) return;
-
-      const res = await fetch("/api/delete-test", {
-        method: "DELETE",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ subject, date })
-      });
-
-      const result = await res.json();
-      alert(result.message);
-      document.getElementById("classSelect").dispatchEvent(new Event("change")); // Refresh list
-    }
-  </script>
+      window.onload = () => {
+        loadClasses();
+      };
+    </script>
   </div>
 </body>
 </html>
